# FounderOS

./: .dockerignore  .env.example  .gitignore  .gitmodules  BACKEND_HANDOFF.md  BACKEND_ISSUE_UPDATE.md  CHANGELOG.md  CHECKLIST.md  CONTRIBUTING.md  Dockerfile  Dockerfile.autopilot  Dockerfile.quorum  HANDOFF_2026-04-04_UNIFIED_SHELL.md  HANDOFF_2026-04-05_LINEAR_REDESIGN.md  HANDOFF_2026-04-05_UNIFIED_SHELL_UI_PASS.md  LICENSE  README.md  REDESIGN_PLAN.md  SECURITY.md  agent.md  docker-compose.yaml  package-lock.json  package.json  tsconfig.json  turbo.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: release-acceptance.yml
.omc/state/: hud-state.json  hud-stdin-cache.json
apps/autopilot-api/: package.json
apps/quorum-api/: package.json
apps/web/: middleware.ts  (+4 more)
docs/: FRONTEND_DESIGN_AGENT_BRIEF.md  FRONTEND_DESIGN_AGENT_PROMPT.md  LINEAR_SOURCE_REGISTRY.md  founderos-truth-matrix.md  release-checklist.md  release-debug-playbook.md  truth-matrix.md
founderos_contracts/: brief_v2.py  citations.py  lifecycle.py  proof_bundle.py  pyproject.toml  shared_v1.py
founderos_contracts/founderos_contracts.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
founderos_contracts/tests/: test_brief_v2.py  test_citations.py  test_lifecycle.py  test_packaging_smoke.py  test_proof_bundle.py  test_shared_v1.py
scripts/: bootstrap_founderos_local.sh  extract-linear-tokens.sh  mem-watch.sh  release-contract.test.mjs  run-ci-test-step.mjs  run-live-hardening-suite.mjs  run-live-review-suite.mjs  run-stack.mjs  seed-parity-linked-chain.mjs  setup-linear-references.sh
(+248 files in other folders)
